tree-sitter-weaveback/test/corpus/basics.txt
================================================================================
Text passthrough
================================================================================

hello world

--------------------------------------------------------------------------------

(source_file
  (text))

================================================================================
Variable interpolation
================================================================================

%(name)

--------------------------------------------------------------------------------

(source_file
  (text)
  (variable
    name: (identifier))
  (text))

================================================================================
Simple macro call
================================================================================

%greet(world)

--------------------------------------------------------------------------------

(source_file
  (text)
  (macro_call
    name: (macro_name)
    arg: (argument
      (arg_text)))
  (text))

================================================================================
Macro call no args
================================================================================

%version()

--------------------------------------------------------------------------------

(source_file
  (text)
  (macro_call
    name: (macro_name))
  (text))

================================================================================
Macro call multiple args
================================================================================

%def(greet, name, Hello %(name)!)

--------------------------------------------------------------------------------

(source_file
  (text)
  (macro_call
    name: (macro_name)
    arg: (argument
      (arg_text))
    arg: (argument
      (arg_text))
    arg: (argument
      (arg_text)
      (variable
        name: (identifier))
      (arg_text)))
  (text))

================================================================================
Untagged block
================================================================================

%{hello%}

--------------------------------------------------------------------------------

(source_file
  (text)
  (block
    open: (block_open)
    (text)
    close: (block_close))
  (text))

================================================================================
Tagged block
================================================================================

%body{some content%body}

--------------------------------------------------------------------------------

(source_file
  (text)
  (block
    open: (block_open)
    (text)
    close: (block_close))
  (text))

================================================================================
Block allows commas and parens
================================================================================

%{f(x, y)%}

--------------------------------------------------------------------------------

(source_file
  (text)
  (block
    open: (block_open)
    (text)
    close: (block_close))
  (text))

================================================================================
Line comment hash
================================================================================

%# this is a comment

--------------------------------------------------------------------------------

(source_file
  (text)
  (line_comment)
  (text))

================================================================================
Line comment slash
================================================================================

%// this is a comment

--------------------------------------------------------------------------------

(source_file
  (text)
  (line_comment)
  (text))

================================================================================
Line comment dash
================================================================================

%-- this is a comment

--------------------------------------------------------------------------------

(source_file
  (text)
  (line_comment)
  (text))

================================================================================
Escaped special
================================================================================

100%% done

--------------------------------------------------------------------------------

(source_file
  (text)
  (escaped_special)
  (text))

================================================================================
Nested macro in block
================================================================================

%def(bold, x, %{**%(x)**%})

--------------------------------------------------------------------------------

(source_file
  (text)
  (macro_call
    name: (macro_name)
    arg: (argument
      (arg_text))
    arg: (argument
      (arg_text))
    arg: (argument
      (arg_text)
      (block
        open: (block_open)
        (text)
        (variable
          name: (identifier))
        (text)
        close: (block_close))))
  (text))

================================================================================
Nested macro call
================================================================================

%outer(%inner(x), y)

--------------------------------------------------------------------------------

(source_file
  (text)
  (macro_call
    name: (macro_name)
    arg: (argument
      (macro_call
        name: (macro_name)
        arg: (argument
          (arg_text))))
    arg: (argument
      (arg_text)))
  (text))
